fixed overflow box content

--- a/public/console/css/baasbox.css
+++ b/public/console/css/baasbox.css
@@ -412,6 +412,9 @@ nav {
 .plugin .action{
 	font-size:11px;
 }
+.box-content {
+  overflow: auto;
+}
 .box-content ul.plugin{
 	margin:-10px;
 }
